<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:text="@string/my_nanodegree_apps"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sportify_streamer"
            style="@style/OrangeButton"
            android:text="@string/spotify_streamer"/>

        <Button
            android:id="@+id/btn_scores_app"
            style="@style/OrangeButton"
            android:text="@string/scores_app"/>

        <Button
            android:id="@+id/btn_library_app"
            style="@style/OrangeButton"
            android:text="@string/library_app"/>

        <Button
            android:id="@+id/btn_build_it_bigger"
            style="@style/OrangeButton"
            android:text="@string/build_it_bigger"/>

        <Button
            android:id="@+id/btn_xyz_reader"
            style="@style/OrangeButton"
            android:text="@string/xyz_reader"/>

        <Button
            android:id="@+id/btn_capstone_own_project"
            style="@style/RedButton"
            android:text="@string/capstone_own_project"/>
    </LinearLayout>
</RelativeLayout>
